--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
-<audio controls autoplay loop>
-  <source src="amongus.mp3" type="audio/mpeg">
-</audio> 
+<audio controls autoplay loop style="display: none; visibility: hidden;" src="amongus.mp3"></audio>
+
+<script>
+	let audioElement = document.querySelector("audio");
+	audioElement.load()
+	
+	audioElement.addEventListener("load", function() { 
+  		audioElement.play(); 
+	}, true);
+</script>
